# ouroboros

./: .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  DEVELOPER_GUIDE.md  DOCKER.md  Dockerfile  JOIN.md  README.md  docker-compose.yml  install.ps1  install.sh  join_oracle.ps1  join_ouroboros.ps1  join_ouroboros.sh  ouro.md
.github/workflows/: cd.yml  ci.yml  docker-publish.yml  publish-sdk-js.yml  publish-sdk-py.yml  release.yml  security.yml
contract_templates/simple_dex/: Cargo.toml
contract_templates/simple_dex/src/: lib.rs
contract_templates/token/: README.md
deploy/: deploy-to-gcp.bat  docker-compose.nginx.yml  gcp-cleanup-old.sh  gcp-deploy.sh  grafana-peer-dashboard.json  prometheus-config.yml  prometheus-full.yml  remove-old-deployment.bat  startup-script.sh
docs/: OUROBOROS_DOCUMENTATION.md  SUBCHAIN_GUIDE.md
midgard_wallet/: Cargo.toml  README.md  midgard.bat  start-node.bat
midgard_wallet/src/: client.rs  main.rs  transaction.rs  wallet.rs
ouro_dag/: .env.example  Cargo.toml  README.md  SECURITY.md  install.ps1  install.sh
ouro_dag/config/: docker-compose.prod.yml  mainnet.json  oracle_node.json  testnet_oracle.json  validator.json
ouro_dag/scripts/: deploy_testnet_oracle.sh
ouro_dag/src/: account_abstraction.rs  alerts.rs  anchor_service.rs  api.rs  auto_update.rs  backup.rs  batch_writer.rs  bridge.rs  cli_dashboard.rs  config.rs  config_manager.rs  fee_market.rs  indexer.rs  intrusion_detection.rs  key_rotation.rs  keymgmt.rs  keys.rs  lib.rs  light_client.rs  light_node_rewards.rs  main.rs  main_consensus_boot.rs  mempool.rs  merkle.rs  metrics.rs  mev_protection.rs  node_identity.rs  node_metrics.rs  oracle.rs  oracle_data_sources.rs  oracle_fetchers.rs  oracle_node.rs  oracle_relay.rs  oracle_subchain.rs  rate_limit.rs  reconciliation.rs  rewards.rs  ring_signatures.rs  roles_handler.rs  simple_metrics.rs  (+10 more)
ouro_dag/src/bft/: block.rs  consensus.rs  crypto_bridge.rs  leader_rotation.rs  messages.rs  mod.rs  qc.rs  slashing.rs  state.rs  validator_registry.rs
ouro_dag/src/controller/: mod.rs
ouro_dag/src/cross_chain/: fraud_proofs.rs  mod.rs
ouro_dag/src/crypto/: hybrid.rs  keys.rs  merkle.rs  mod.rs  pq.rs
ouro_dag/src/dag/: dag.rs  mod.rs  transaction.rs  validation.rs
ouro_dag/src/data_availability/: api.rs  archival.rs  ipfs.rs  mod.rs  s3_backup.rs
ouro_dag/src/escrow/: finalizer.rs  mod.rs
ouro_dag/src/fraud_detection/: alerts.rs  api.rs  mod.rs  patterns.rs
ouro_dag/src/governance/: integration.rs  mod.rs  pause.rs  proposals.rs  timelock.rs  voting.rs
ouro_dag/src/mainchain/: api.rs
ouro_dag/src/microchain/: api.rs  challenges.rs  integration.rs  mod.rs  security.rs  store.rs
ouro_dag/src/multisig/: mod.rs
ouro_dag/src/native_contracts/: mod.rs
ouro_dag/src/network/: bft_msg.rs  dht.rs  dht_integration.rs  handshake.rs  mod.rs
ouro_dag/src/ouro_coin/: api.rs  economics.rs  fee_processor.rs  integration.rs  mod.rs
ouro_dag/src/peer_discovery/: mod.rs
ouro_dag/src/subchain/: aggregator.rs  anchor.rs  api.rs  fraud.rs  manager.rs  messages.rs  mod.rs  poster.rs  poster_worker.rs  registry.rs  relayer.rs  rent_collector.rs  store.rs  verify.rs
ouro_dag/src/validator_registration/: api.rs  mod.rs
ouro_dag/src/vm/: api.rs  contract_macros.rs  gas.rs  host_functions.rs  mod.rs  ovm.rs  precompiles.rs  storage.rs  types.rs
ouro_dag/src/zk_proofs/: batch.rs  circuit.rs  mod.rs  privacy.rs  state_proof.rs
ouro_dag/tests/: consensus.rs  contract_deployment.rs  crypto_keys.rs  gas_analysis.rs  hotstuff_test.rs  merkle.rs  merkle_helper.rs  microstore.rs  multi_contract_interaction.rs  nft_contract_tests.rs  performance_benchmarks.rs  subchain_smoke.rs  substore.rs  token_contract_tests.rs
ouro_py/: README.md  SHADOW_MODE.md  requirements.txt
ouro_py/ouro_light/: README.md  main.py
ouro_py/ouro_medium/: README.md  main.py
ouro_py/protos/: ouro.proto
ouro_sdk/: Cargo.toml  README.md
ouro_sdk/examples/: complete_dapp.rs
ouro_sdk/src/: client.rs  error.rs  lib.rs  microchain.rs  subchain.rs  transaction.rs  types.rs
ouro_sdk_js/: LICENSE  README.md  package.json  tsconfig.json
ouro_sdk_js/src/: client.ts  errors.ts  index.ts  microchain.ts  subchain.ts  transaction.ts  types.ts
ouro_sdk_python/: .gitignore  README.md  pyproject.toml  setup.py
ouro_sdk_python/ouro_sdk/: __init__.py  client.py  errors.py  microchain.py  subchain.py  transaction.py  types.py
ouro_wallet_ui/: README.md
scripts/: build.bat  check.bat  cleanup-old-deployment.sh  cleanup.bat  deploy-v0.4.0.sh  fix-file-limits.sh  install-monitoring.sh  install.bat  join_oracle.ps1  join_ouroboros.bat  join_ouroboros.ps1  join_ouroboros.sh  join_ouroboros_improved.ps1  redeploy-v0.4.0.ps1  release.bat  release.sh  run.bat  run_tests.sh  sign_migration.py  test.bat
sdk/js/: README.md  package.json
sdk/js/src/: index.d.ts  index.js
sdk/py/: README.md  pyproject.toml
sdk/py/ouro_sdk/: __init__.py  client.py
