[package]
name = "ouro_dag"
version = "1.5.0"
edition = "2021"

[[bin]]
name = "ouro"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.34", features = ["rt-multi-thread", "macros", "time", "net", "signal"] }
ed25519-dalek = { version = "2.1.0", features = ["serde", "rand_core"] }
# Post-quantum cryptography (Phase 6 security hardening)
pqcrypto-dilithium = "0.5"
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"
sha2 = "0.10"
hmac = "0.12"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
hex = "0.4"
anyhow = "1.0"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
backoff = { version = "0.4", features = ["futures", "tokio"] }
axum = { version = "0.6", features = ["headers", "json"] }
axum-server = { version = "0.5", features = ["tls-rustls"] }
rocksdb = "0.22.0"
num_cpus = "1.16"
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"
env_logger = "0.9"
clap = { version = "4.0", features = ["derive"] }
igd = { version = "0.11", features = ["aio"] }
local-ip-address = "0.5"
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }
tower-http = { version = "0.4", features = ["cors"] }
futures-util = "0.3"
bincode = "1.3"
rand = "0.8"
tokio-stream = "0.1"
either = "1.8"
http = "0.2"
tower = "0.4"
async-trait = "0.1"
prometheus = { version = "0.13", features = ["process"] }
once_cell = "1.17"
dashmap = "5.4"
moka = { version = "0.11", features = ["future"] }
governor = "0.6"
nonzero_ext = "0.3"
url = "2.3"
bs58 = "0.5"
base64 = "0.21"
blake2 = "0.10"
subtle = "2.5"  # Constant-time comparison for timing-attack prevention
# md5 removed (L2 fix) - replaced with blake2 for backup checksums
ed25519 = "2.2.0"
signature = "2.2.0"
prost = "0.12"
tonic = { version = "0.10", features = ["tls", "tls-roots"] }
tonic-build = "0.10"
prost-types = "0.12"
bytes = "1.4"
http-body = "0.4"
percent-encoding = "2.2"
pin-project-lite = "0.2"
tokio-rustls = "0.24"
rustls = { version = "0.22", features = ["ring"] }
rustls-pki-types = "1.0"
rcgen = "0.11"
pem = "2.0"
x509-parser = "0.15"
webpki-roots = "0.25"
rustls-pemfile = "1.0"
p256 = { version = "0.13", features = ["ecdsa"] }
ecdsa = "0.16"
elliptic-curve = "0.13"
k256 = { version = "0.13", features = ["ecdsa"] }
secp256k1 = "0.27"
getrandom = "0.2"
ring = "0.17"
untrusted = "0.9"
yasna = "0.5"
bit-vec = "0.6"
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
yansi = "0.5"
dotenvy = "0.15"
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
tokio-socks = "0.5"  # Tor SOCKS5 proxy support for hybrid darkweb operation
whoami = "1.6"       # For getting system hostname
crossterm = "0.28"   # Terminal manipulation (alternate screen, cursor, etc.)
fs_extra = "1.3"     # Directory operations for diagnostics

# OVM (Ouroboros Virtual Machine) - WASM runtime
wasmi = "0.31"       # WASM interpreter for smart contracts
wasmparser = "0.121" # WASM validation and parsing
parity-wasm = "0.45" # WASM manipulation and gas injection
lru = "0.12"         # LRU cache for contract storage
tiny-keccak = { version = "2.0", features = ["keccak"] }  # Keccak256
ripemd = "0.1"       # RIPEMD-160

# Data Availability Layer (optional - only compiled when needed)
ipfs-api-backend-hyper = { version = "0.6", default-features = false, features = ["with-builder"], optional = true }  # IPFS client
aws-sdk-s3 = { version = "1.0", optional = true }   # S3 backup storage
aws-config = { version = "1.0", optional = true }   # AWS configuration

# ZK Proofs for privacy and scalability
ark-std = { version = "0.4", default-features = false }
ark-ff = "0.4"
ark-ec = "0.4"
ark-bn254 = "0.4"
ark-groth16 = "0.4"
ark-r1cs-std = "0.4"
ark-relations = "0.4"
ark-serialize = "0.4"
ark-snark = "0.4"
rayon = "1.7"

# DHT/Kademlia for peer discovery
libp2p = { version = "0.53", features = ["kad", "tcp", "noise", "yamux"] }
libp2p-kad = "0.45"

# Ring signatures and VRF
curve25519-dalek = "4.0"

[features]
default = []
data-availability = ["ipfs-api-backend-hyper", "aws-sdk-s3", "aws-config"]

[dev-dependencies]
tempfile = "3.6"
wat = "1.0"  # WAT to WASM compiler for tests

[profile.dev]
incremental = true

[profile.release]
incremental = true
