[package]
name = "ouro_sdk"
version = "0.3.0"
edition = "2021"
description = "Ouroboros Microchain SDK for building decentralized applications"
license = "MIT"

[lib]
name = "ouro_sdk"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# Cryptography
ed25519-dalek = "2.1"
sha2 = "0.10"
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
