[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ouro-sdk"
version = "1.0.0"
description = "Python SDK for the Ouroboros decentralized blockchain network"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["ouroboros", "blockchain", "sdk", "crypto", "bft", "hotstuff"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP",
]

[project.optional-dependencies]
async = ["httpx>=0.24"]

[project.urls]
Homepage = "https://github.com/ouroboros-network/ouroboros"
Repository = "https://github.com/ouroboros-network/ouroboros"
Issues = "https://github.com/ouroboros-network/ouroboros/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ouro_sdk*"]
